--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "keywords": "",
   "license": "",
   "author": "",
+  "homepage": "https://irostub.github.io/portfolio/",
   "scripts": {
-    "build": "parcel build index.html",
+    "build": "parcel build index.html --public-url ./",
     "dev": "parcel index.html --open",
-    "prod": "parcel build index.html --out-dir docs",
     "start": "npm run build && npm run dev",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4"
   },
   "dependencies": {
-    "fullpage.js": "^3.1.2"
+    "fullpage.js": "^3.1.2",
+    "gh-pages": "^3.2.3"
   }
 }
